--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if lt IE 9]>
 <script src="js/html5shiv.js"></script>
 <![endif]-->
+<link rel="stylesheet" href="default.css">
 <title>makochang</title>
 </head>
 
